--- a/client/src/component/CreateResume/CreateResume.css
+++ b/client/src/component/CreateResume/CreateResume.css
@@ -6,7 +6,7 @@
     /* justify-content: space-between; */
 }
 
-.temp1{
+.temp{
     /* border: 2px solid black; */
     padding: 30px;
     width: 90%;
