--- a/client/src/component/pages/ResTemp3.css
+++ b/client/src/component/pages/ResTemp3.css
@@ -5,7 +5,8 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f7f7f7;
+  border: 2px solid black;
+  overflow-y: auto;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
