--- a/client/src/component/UserInputs/Experience/UserExp.css
+++ b/client/src/component/UserInputs/Experience/UserExp.css
@@ -1,52 +1,49 @@
 .user-exp {
+  width: inherit;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   font: inherit;
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
   /* height: 25vh; */
 }
 
-.user-exp-top-buttons{
+.user-exp-top-buttons {
   display: flex;
-  /* border: 2px solid black; */
   align-items: center;
   justify-content: flex-end;
-  /* width: 20%; */
-  /* padding: 10px; */
-  margin: 10px;
   border-bottom: 2px solid black;
 }
 
-.user-exp-next-btn-div{
-    text-decoration: none;
-    text-decoration-line: none;
-    display: flex;
-    /* width: 97%; */
-    justify-content: flex-end;
-    padding: 10px;
+.user-exp-next-btn-div {
+  text-decoration: none;
+  text-decoration-line: none;
+  display: flex;
+  /* width: 97%; */
+  justify-content: flex-end;
+  padding: 10px;
 }
 
-.user-exp-back-btn{
+.user-exp-back-btn {
   cursor: pointer;
   border: 2px solid lightblue;
   padding: 10px;
   border-radius: 8px;
 }
 
-.user-exp-back-btn:hover{
+.user-exp-back-btn:hover {
   background-color: red;
   color: white;
 }
 
-.user-exp-next-btn{
-    cursor: pointer;
-    border: 2px solid lightblue;
-    padding: 10px;
-    border-radius: 8px;
+.user-exp-next-btn {
+  cursor: pointer;
+  border: 2px solid lightblue;
+  padding: 10px;
+  border-radius: 8px;
 }
 
-.user-exp-next-btn:hover{
+.user-exp-next-btn:hover {
   background-color: lightblue;
   color: white;
 }
@@ -55,12 +52,12 @@
   display: flex;
   padding: 10px;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   /* height: 5vh; */
 }
 
-.user-exp-wrap input{
-  width: 200px;
+.user-exp-wrap input {
+  width: 230px;
   padding: 10px;
   margin: 5px 0;
   box-sizing: border-box;
@@ -72,12 +69,11 @@
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.user-exp-wrap input:focus{
+.user-exp-wrap input:focus {
   border-color: #0066cc;
   box-shadow: 0 0 8px rgba(0, 102, 204, 0.3);
   outline: none;
 }
-
 
 .user-exp-work-summary-div {
   display: flex;
@@ -115,15 +111,16 @@
 .user-exp-add-exp-btn {
   align-items: center;
   appearance: none;
-  background-color: #FCFCFD;
+  background-color: #fcfcfd;
   border-radius: 4px;
   border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   box-sizing: border-box;
-  color: #36395A;
+  color: #36395a;
   cursor: pointer;
   display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
+  font-family: "JetBrains Mono", monospace;
   height: 48px;
   justify-content: center;
   line-height: 1;
@@ -134,48 +131,87 @@
   position: relative;
   text-align: left;
   text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
+  transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
-  will-change: box-shadow,transform;
+  will-change: box-shadow, transform;
   font-size: 18px;
 }
 
 .user-exp-add-exp-btn:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
 }
 
 .user-exp-add-exp-btn:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
 .user-exp-add-exp-btn:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
+  box-shadow: #d6d6e7 0 3px 7px inset;
   transform: translateY(2px);
 }
 
-
-.delete-btn{
+.delete-btn {
   position: absolute;
   font-size: 28px;
   left: 31%;
-  /* bottom: 10px; */
-  
+  bottom: 30%;
+
   cursor: pointer;
 }
 
-.user-exp-add-exp-btn{
+.user-exp-add-exp-btn {
   color: black;
+}
+
+.work-summary {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  width: 33rem;
+  padding: 10px 0;
+  justify-content: start;
+  /* border: 2px solid aqua; */
+}
+
+.work-summary label {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  /* border: 2px solid slateblue; */
+  width: inherit;
+  padding: 5px 0 5px 0;
+}
+
+.work-summary textarea {
+  border: 2px solid red;
+  display: flex;
+  resize: none;
+  height: 150px;
+  padding: 8px;
+  /* margin-left: 10px; */
+  margin: 5px 1px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  color: #333;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 .switch {
   --button-width: 3em;
   --button-height: 1.5em;
   --toggle-diameter: 1.5em;
-  --button-toggle-offset: calc((var(--button-height) - var(--toggle-diameter)) / 2);
+  --button-toggle-offset: calc(
+    (var(--button-height) - var(--toggle-diameter)) / 2
+  );
   --toggle-shadow-offset: 10px;
   --toggle-wider: 3em;
   --color-grey: #cccccc;
@@ -186,14 +222,14 @@
   margin: 10px;
   justify-content: start;
   gap: 10px;
- }
- 
- .switch label{
+}
+
+.switch label {
   font-size: 1.2em;
   font-weight: 500;
- }
+}
 
- .slider {
+.slider {
   display: inline-block;
   width: var(--button-width);
   height: var(--button-height);
@@ -201,9 +237,9 @@
   border-radius: calc(var(--button-height) / 2);
   position: relative;
   transition: 0.3s all ease-in-out;
- }
- 
- .slider::after {
+}
+
+.slider::after {
   content: "";
   display: inline-block;
   width: var(--toggle-diameter);
@@ -213,28 +249,37 @@
   position: absolute;
   top: var(--button-toggle-offset);
   transform: translateX(var(--button-toggle-offset));
-  box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+  box-shadow: var(--toggle-shadow-offset) 0
+    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
   transition: 0.3s all ease-in-out;
- }
- 
- .switch input[type="checkbox"]:checked + .slider {
+}
+
+.switch input[type="checkbox"]:checked + .slider {
   background-color: var(--color-green);
- }
- 
- .switch input[type="checkbox"]:checked + .slider::after {
-  transform: translateX(calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)));
-  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
- }
- 
- .switch input[type="checkbox"] {
+}
+
+.switch input[type="checkbox"]:checked + .slider::after {
+  transform: translateX(
+    calc(
+      var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)
+    )
+  );
+  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0
+    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+}
+
+.switch input[type="checkbox"] {
   display: none;
- }
- 
- .switch input[type="checkbox"]:active + .slider::after {
+}
+
+.switch input[type="checkbox"]:active + .slider::after {
   width: var(--toggle-wider);
- }
- 
- .switch input[type="checkbox"]:checked:active + .slider::after {
-  transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
- }
- 
+}
+
+.switch input[type="checkbox"]:checked:active + .slider::after {
+  transform: translateX(
+    calc(
+      var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)
+    )
+  );
+}
