--- a/client/src/component/UserInputs/Skills/UserSkills.css
+++ b/client/src/component/UserInputs/Skills/UserSkills.css
@@ -1,20 +1,20 @@
 .user-skills {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));  
   font: inherit;
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
 }
 
 .user-skill-wrap {
-  display: grid;
+  display: flex;
   padding: 10px;
   flex-direction: column;
   justify-content: space-around;
 }
 
 .user-skill-wrap input {
-  width: 200px;
+  width: 230px;
   padding: 10px;
   margin: 5px 0;
   box-sizing: border-box;
