--- a/client/src/component/AuthButtonCompo/AuthButton.css
+++ b/client/src/component/AuthButtonCompo/AuthButton.css
@@ -1,15 +1,38 @@
 .auth-btn-div{
-    width: 13.5vw;
+    width: 20vw;
     padding: 10px;
     border: 2px solid #e5e6eb;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     cursor: pointer;
 }
 
 .auth-btn-div p {
-    font-size: 14px;
-    font-weight: 500;
+    font-weight: 400px;
+    padding-left: 10px;
+}
 
+
+@media (max-width: 768px){
+    .auth-btn-div{
+        width: 100%;
+        padding: 10px;
+        border: 2px solid #e5e6eb;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+    }
+
+    .auth-btn-div p {
+        display: none;
+    }
+    .auth-btn-icon{
+        display: flex;
+        align-items: center;
+
+        justify-content: center;
+        font-size: 18px;
+    }
 }
