--- a/client/src/component/Footer/Footer.css
+++ b/client/src/component/Footer/Footer.css
@@ -5,7 +5,8 @@
     color: white;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    /* padding: 20px; */
+    /* width: 120%; */
 }
 
 .footer-logo-div{
@@ -41,4 +42,16 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+@media (max-width: 768px){
+    .footer-div{
+        /* width: 134%; */
+    }
+}
+
+@media (max-width: 425px){
+    .footer-div{
+        /* width: 210%; */
+    }
 }
