--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -26,17 +26,17 @@ body {
   padding: 20px;
   width: 100%;
   top: 0;
-  position: fixed; /* Make the navbar fixed at the top */
+  position: fixed; 
   background-color: rgba(
     255,
     255,
     255,
     0.95
-  ); /* Slightly transparent background */
-  z-index: 1000; /* Ensure it's above other content */
-  border-bottom: 2px solid rgba(0, 0, 0, 0.1); /* Lighter border */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); /* Softer shadow */
-  backdrop-filter: blur(10px); /* Soft blur effect on the background content */
+  ); 
+  z-index: 1000; 
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); 
+  backdrop-filter: blur(10px); 
 }
 
 .top-left {
@@ -46,7 +46,6 @@ body {
 
 .navi-bar {
   display: flex;
-  /* border: 2px solid black; */
   padding: 10px;
   justify-content: space-between;
   align-items: center;
@@ -64,6 +63,7 @@ body {
   padding: 10px;
   justify-content: space-around;
   flex: 0.8;
+  text-align: center;
 }
 
 .top-right {
@@ -198,7 +198,8 @@ body {
 }
 
 .features-heading {
-  font-size: clamp(28px, 3.8vw, 55px);
+  /* font-size: clamp(28px, 3.8vw, 55px); */
+  font-size: 2.5em;
   font-weight: light;
   text-align: center;
 }
@@ -235,18 +236,31 @@ body {
 }
 
 .splide-heading {
-  font-size: clamp(28px, 3.8vw, 55px);
+  font-size: 2.5em;
   font-weight: light;
   text-align: center;
-  margin-bottom: 30px; /* Add some margin for spacing */
+  margin-bottom: 30px; 
 }
 
 .splide {
   display: flex;
   padding: 20px 0;
   width: 100%;
-  /* overflow: hidden; Ensure overflow is hidden */
 }
+
+.splide-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.splide-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
 
 .splide-img-div {
   border: 2px solid black;
