--- a/client/src/component/Footer/Footer.css
+++ b/client/src/component/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer-div{
+    margin-top: 20px;
     display: flex;
     /* border: 2px solid black; */
     background-color: rgb(235, 235, 235);
