--- a/client/src/component/UserResumes/MyResume.css
+++ b/client/src/component/UserResumes/MyResume.css
@@ -1,25 +1,8 @@
-.user-resume-div{
-    padding: 20px;
-    font-size: 25px;
+.my-resume-main{
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  height: 90vh;
 }
-
-.user-resume {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    justify-content: center;
-  }
-  
-  .user {
-    width: 20vw;
-    height: 50vh;
-    background-color: #f0f0f0;
-    margin: 10px;
-    transition: transform 0.3s ease;
-  }
-  
-  .user:hover {
-    transform: scale(1.1); 
-    cursor: pointer;
-  }
   
