--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -228,13 +228,15 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
+  border-radius: 2px solid black;
+
 }
 
 .splide-heading {
   font-size: 2.5em;
   font-weight: light;
   text-align: center;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .splide {
@@ -244,7 +246,9 @@ body {
 }
 
 .splide-slide {
-  position: relative;
+  /* position: relative; */
+  border: 2px solid transparent;
+  border-radius: 10px;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -252,8 +256,9 @@ body {
 
 .splide-slide img {
   width: 100%;
-  height: 100%;
+  height: 70%;
   object-fit: cover;
+  object-position: center;
 }
 
 .splide-img-div {
